webapp/infra/webapp_namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: ara-front
  labels:
    name: ara-front
