webapp/infra/webapp_deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
  namespace: ara-front
spec:
  replicas: 1
  selector:
    matchLabels:
      name: webapp
  template:
    metadata:
      labels:
        name: webapp
    spec:
      containers:
      - name: webapp
        image: asstra/webapp:latest
        imagePullPolicy: Always
        ports:
          - name: http
            containerPort: 3000
            protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 5
