webapp/infra/webapp_service.yml
apiVersion: v1
kind: Service
metadata:
  name: webapp
  namespace: ara-front
spec:
  selector:
    name: webapp
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
  type: NodePort
